# swaybar-types

./: Cargo.toml  README.md
src/: block.rs  click.rs  header.rs  lib.rs
