[package]
name = "swaybar-types"
version = "1.0.0"
authors = ["Jayce Fayne <jayce.fayne@mailbox.org>"]
edition = "2018"
description = "A library for building swaybar status commands in rust."
license = "MIT"
repository = "https://github.com/jaycefayne/swaybar-types"
categories = ["api-bindings", "data-structures"]
keywords = ["sway", "swaywm", "protocol","serde", "json"]
readme = "README.md"

[dependencies]
serde = "^1"
serde_derive = "^1"
serde_json = "^1"